# QML_Navigation_Card

./: CMakeLists.txt  Main.qml  README.md  main.cpp
